[gd_scene load_steps=3 format=3 uid="uid://bj5iuyorvwgka"]

[ext_resource type="Script" uid="uid://6u8cjhvo83w6" path="res://scripts/weapons/shield.gd" id="1_t0abt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iokhx"]
size = Vector2(49, 8)

[node name="shield" type="Node2D"]
script = ExtResource("1_t0abt")

[node name="collider" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="collider"]
position = Vector2(15, -25.5)
rotation = -1.5708
shape = SubResource("RectangleShape2D_iokhx")
one_way_collision_margin = 0.0

[node name="shield_cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="collider" to="." method="_on_collider_area_entered"]
[connection signal="body_entered" from="collider" to="." method="_on_collider_body_entered"]
[connection signal="timeout" from="shield_cooldown" to="." method="_on_shield_cooldown_timeout"]
